fix text align

--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -4,5 +4,5 @@
 
 
 .container {
-  text-transform: center;
+  text-align: center;
 }
